--- a/css/swedmarks.css
+++ b/css/swedmarks.css
@@ -1,12 +1,42 @@
-#listMainFolder {
-    margin: 0px;
+#navHeader {
+    top: 30px;
+    margin-top: -30px;
+    height: 30px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    overflow-y: auto;
+}
+
+#navHeader ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+#navHeader ul li {
+    display: inline;
+}
+
+#navHeader ul li a {
+    text-decoration: none;
+    color: #000;
+    padding: .2em 1em;
+}
+
+#navHeader ul li a:hover
+{
+    color: #fff;
+    background-color: #369;
 }
 
 #navFolder {
-    margin-top: 0px;
-    float: left;
+    left: 240px;
+    margin-left: -240px;
     width: 240px;
-    height: 100%;
+    position: fixed;
+    top: 30;
+    bottom: 0;
     border: 1px solid #dddddd;
 }
 
@@ -35,11 +65,11 @@
 }
 
 #navBookmarks {
-    float: none;
-    margin-top: 50px;
-    margin-left: 250px;
-    height: 100%;
-    //border: 1px solid #dddddd;
+    position: fixed;
+    top: 30;
+    bottom: 0;
+    left: 250px;
+    overflow-y: auto;
 }
 
 .bookmarkItem {
