--- a/css/swedmarks.css
+++ b/css/swedmarks.css
@@ -27,7 +27,7 @@
 #navHeader ul li a {
     text-decoration: none;
     color: #000;
-    padding: .2em 1em;
+    padding-left: 3px;
 }
 
 #navHeader ul li a:hover
@@ -106,6 +106,7 @@
     overflow: auto;
     margin-left: 2px;
     margin-bottom: 5px;
+    margin-right: 5px;
 
 //    padding: 0.9em 1em;
  
